# libneurosuite

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LibKlustersSharedConfig.cmake.in  README.md  depends  qhelpviewer.cpp  qhelpviewer.h
.travis/: install.sh  script.sh
cmake/: DeployQt5.cmake  NeurosuiteHelpers.cmake  PackageConfig.cmake  PackageConfig.cmake.in
cmake/modules/: DeployNeurosuite.cmake  DeployQt5.cmake  PackNeurosuite.cmake
package/: depends  description-pak  mkpackage  version
src/: CMakeLists.txt  dockarea.cpp  dockarea.h  libklustersshared_export.h  qcolorbutton.cpp  qcolorbutton.h  qextenddialog.cpp  qextendtabwidget.cpp  qextendtabwidget.h  qpagedialog.cpp  qpagedialog.h  qpagedialog_p.h  qpagedialogwidget.cpp  qpagedialogwidget.h  qpagemodel.cpp  qpagemodel.h  qpageview.cpp  qpageview.h  qpageview_p.cpp  qpageview_p.h  qpagewidget.cpp  qpagewidget.h  qpagewidgetmodel.cpp  qpagewidgetmodel.h  qrecentfileaction.cpp  qrecentfileaction.h
src/gui/: dockarea.cpp  dockarea.h  kseparator.h  libklustersshared-icons.qrc  qextenddialog.cpp  qextenddialog.h  qextenddialog_p.h  qhelpviewer.cpp  qhelpviewer.h  qpagedialog.cpp  qpageview.cpp  qrecentfileaction.cpp  qrecentfileaction.h
src/gui/page/: kseparator.cpp  kseparator.h  qextenddialog.cpp  qpagedialog.cpp  qpagedialog_p.h  qpageview.cpp  qpageview.h  qpageview_p.cpp  qpageview_p.h
src/ksgmltools2/customization/: CATALOG.kdelibs3  catalog.xml
src/ksgmltools2/customization/af/entities/: install-compile.docbook
src/ksgmltools2/customization/bg/entities/: update-doc.docbook
src/ksgmltools2/customization/cs/entities/: underBSDLicense.docbook
src/ksgmltools2/customization/en-GB/entities/: gpl-notice.docbook  update-doc.docbook
src/ksgmltools2/customization/en/entities/: fdl-notice.docbook  underLGPL.docbook
src/ksgmltools2/customization/id/entities/: help-menu.docbook  install-intro.docbook  underFDL.docbook  underGPL.docbook
src/ksgmltools2/customization/ja/entities/: report-bugs.docbook
src/ksgmltools2/customization/lt/entities/: install-compile.docbook  underGPL.docbook
src/ksgmltools2/customization/no/entities/: fdl-notice.docbook  gpl-notice.docbook  help-menu.docbook  underArtisticLicense.docbook  underFDL.docbook
src/ksgmltools2/customization/sl/entities/: update-doc.docbook
src/ksgmltools2/customization/tr/: strings.entities  user.entities
src/ksgmltools2/customization/wa/entities/: help-menu.docbook  lgpl-notice.docbook
src/ksgmltools2/customization/xh/entities/: install-intro.docbook
src/ksgmltools2/customization/xx/: contributor.entities  strings.entities  user.entities
src/ksgmltools2/customization/zh-CN/entities/: underX11License.docbook
src/ksgmltools2/customization/zh-TW/entities/: lgpl-notice.docbook
src/shared/: channelcolors.cpp  channelcolors.h  itemcolors.cpp  itemcolors.h  utilities.cpp  utilities.h  zoomwindow.h
test/: CMakeLists.txt  itemgroupview.cpp  listview.cpp  listview.h  main.cpp  mainview.cpp  mainview.h  scrollarea.cpp  scrollarea.h
